# nexu-backend-test

./: README.md
.github/workflows/: ecr-deploy.yml
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/routes/: brands.py  models.py
backend/app/services/: brand_service.py  model_service.py
backend/app/utils/: sequence.py
backend/tests/: test_brands.py  test_models.py
frontend/: .gitignore
frontend/src/: App.css  App.js  index.css
frontend/src/components/: BrandForm.css  BrandForm.js  BrandList.css  BrandList.js  FilteredModelList.css  FilteredModelList.js  Header.css  Header.js  ModelForm.css  ModelForm.js  ModelList.css  ModelList.js
frontend/src/services/: api.js
